<resources>
    <string name="app_name">Verde</string>
    <string name="title_activity_setup">Ride Setup</string>
    <string name="title_activity_ride">Ride</string>
    <string name="title_activity_login">Login</string>

    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_finish">Finish</string>

    <string name="destination_hint">Destination</string>
    <string name="drive_txt">Drive</string>
    <string name="either_txt">Either</string>
    <string name="ride_txt">Ride</string>
    <string name="passengers_text">Number of passengers</string>
    <string name="accept_txt">Accept trip</string>
</resources>
