<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oracle.verde.SetupActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/bottom_border" >

            <RadioButton android:id="@+id/drive_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drive_txt"
                android:checked="false"
                android:onClick="onRadioButtonClicked" />
            <RadioButton android:id="@+id/either_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/either_txt"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/ride_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ride_txt"
                android:checked="false"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <EditText
            android:id="@+id/destination_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination_hint"
            android:inputType="textCapWords"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/bottom_border"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/clock_btn"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/ic_clock_right" />

            <TextView
                android:id="@+id/depart_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showDatePickerDialog"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/depart_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showTimePickerDialog"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passengers_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <ImageView
                android:src="@drawable/ic_passenger"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="26dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/passengers_text"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/passengers_selector"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="right"/>

        </LinearLayout>

        <EditText
            android:id="@+id/comment_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="6"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:hint="Comments"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/up_bottom_border"/>

    </LinearLayout>

</ScrollView>